--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@ body {
 </style>
 <style>
  TABLE {
-    width: 60%; /* Ширина таблицы */
-    border-bottom: 0px solid maroon; /* Линия внизу таблицы */
-    background: #E0FFFF; /* Цвет фона таблицы */
+    width: 60%; 
+    border-bottom: 0px solid maroon; 
+    background: #E0FFFF; 
 	border: 2px solid #000;
    }
    TH {
-    background: #E0FFFF; /* Цвет фона заголовка */
-    color: #20B2AA; /* Цвет текста */
-    text-align: middle; /* Выравнивание по левому краю */
+    background: #E0FFFF; 
+    color: #20B2AA; 
+    text-align: middle; 
    }
    TD, TH {
-    padding: 6px; /* Поля вокруг текста */
+    padding: 6px; 
    }
 </style>
 <style>
@@ -30,26 +30,26 @@ body {
 </style>
 <style type="text/css">
    #maket {
-    width: 100%; /* Ширина всей таблицы */
+    width: 100%; 
    }
    TD {
-    vertical-align: center; /* Вертикальное выравнивание в ячейках */
+    vertical-align: center; 
 	text-align: center;
-    padding: 5px; /* Поля вокруг ячеек */
+    padding: 5px; 
    }
    TD#leftcol {
-    width: 33%; /* Ширина левой колонки */
-    background: #AFEEEE; /* Цвет фона левой колонки */
-    border: 1px solid #000; /* Параметры рамки */
+    width: 33%;
+    background: #AFEEEE; 
+    border: 1px solid #000; 
    }
    TD#rightcol {
     width: 33%;
 	color: red;
-    background: #AFEEEE; /* Цвет фона правой колонки */
-    border: 1px solid #000; /* Параметры рамки */
+    background: #AFEEEE;
+    border: 1px solid #000; 
    }
    #spacer {
-    width: 33%; /* Расстояние между колонками */
+    width: 33%;
 	color: #20B2AA;
 	background: #E0FFFF;
 	border: 0px solid #000;
@@ -78,7 +78,9 @@ body {
 	<table cellspacing="0" align="center">
 	 <col align="center">
 		<tr>
-		<th><h3>Водопад назван именем деревни, расположенной неподалеку, это самый крупный трехкаскадный водопад в Башкортостане. Высота его каскадов в сумме составляет около 17 метров. Весной и осенью живописный водопад полноводен и наиболее величественен. С середины прошлого столетия данная местность объявлена памятником природы. Знаменит водопад залежами ценных пород яшмы и разнообразным растительным миром, отдельные представители которого находятся под охраной.<h3></th>
+		<th><h3>Водопад назван именем деревни, расположенной неподалеку, это самый крупный трехкаскадный водопад в Башкортостане. Высота его каскадов в сумме составляет около 17 метров.
+			Весной и осенью живописный водопад полноводен и наиболее величественен. С середины прошлого столетия данная местность объявлена памятником природы.
+			Знаменит водопад залежами ценных пород яшмы и разнообразным растительным миром, отдельные представители которого находятся под охраной.<h3></th>
 		</tr>
 	</table>
 	<img align="middle" src="img/dostoprim4.jpg" width="85%" height="60%" class="center">
@@ -86,7 +88,9 @@ body {
 	<table cellspacing="0" align="center">
 	 <col align="center">
 		<tr>
-		<th><h3>Озеро «Талкас» - памятник природы. 453630, Республика Башкортостан, Баймакский район, д.Исяново. Расположено вдоль западного подножья хребта Ирандык в 30 км к северу от города Баймак. Название происходит от башкирского слова талғын (т.е. спокойно, медленно плещутся волны). Площадь зеркала 3,92 км 2, объем воды 15-16 млн. м 3, максимальная глубина 12 м, при средней глубине 4,5 м.<h3></th>
+		<th><h3>Озеро «Талкас» - памятник природы. 453630, Республика Башкортостан, Баймакский район, д.Исяново. Расположено вдоль западного подножья хребта Ирандык в 30 км к северу от города Баймак.
+			Название происходит от башкирского слова талғын (т.е. спокойно, медленно плещутся волны).
+			Площадь зеркала 3,92 км 2, объем воды 15-16 млн. м 3, максимальная глубина 12 м, при средней глубине 4,5 м.<h3></th>
 		</tr>
 	</table>
 	<img align="middle" src="img/sib2.jpg" width="85%" height="60%" class="center">
@@ -94,7 +98,10 @@ body {
 	<table cellspacing="0" align="center">
 	 <col align="center">
 		<tr>
-		<th><h3>В Баймакском районе тянется с севера на юг хребет Ирендык, это из восточных отрогов Большого Урала. Длина его 135 километров. Самой высокой точкой хребта является гора Куянташ, высота её 987 метров. Хребет Ирендык — очень красивый хребет. Вид стоящей посереди огромной степи горной цепи впечатляет. Особенно в середине лета картина становится контрастной — желтая степь и зеленые склоны хребта, словно полоска оазиса, тянется на многие километры.<h3></th>
+		<th><h3>В Баймакском районе тянется с севера на юг хребет Ирендык, это из восточных отрогов Большого Урала. Длина его 135 километров.
+			Самой высокой точкой хребта является гора Куянташ, высота её 987 метров. Хребет Ирендык — очень красивый хребет.
+			Вид стоящей посереди огромной степи горной цепи впечатляет. Особенно в середине лета картина становится контрастной — желтая степь и зеленые склоны хребта,
+			словно полоска оазиса, тянется на многие километры.<h3></th>
 		</tr>
 	</table>
 	<img align="middle" src="img/sib3.jpg" width="85%" height="60%" class="center">
@@ -102,7 +109,8 @@ body {
 	<table cellspacing="0" align="center">
 	 <col align="center">
 		<tr>
-		<th><h3>Город Сибай считают столицей Башкирского Зауралья. Сибай является наиболее крупным населенным пунктом в Зауральском регионе Республики Башкортостан и считается одним из значимых промышленных, культурных, научных и образовательных центров Республики Башкортостан.<h3></th>
+		<th><h3>Город Сибай считают столицей Башкирского Зауралья. Сибай является наиболее крупным населенным пунктом в Зауральском регионе Республики Башкортостан
+			и считается одним из значимых промышленных, культурных, научных и образовательных центров Республики Башкортостан.<h3></th>
 		</tr>
 	</table>
 	<table cellspacing="0" id="maket">
