--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Зауралье</title>
+<title>Башкирское Зауралье</title>
 <style>
 body {
     background-color: #EEE8AA;
@@ -121,7 +121,7 @@ body {
 </td>
 <td id="spacer"><h3>В начале 20 века Город Сибай стал одним из центров золотодобычи в регионе — из небольшого посёлка охотников и лесорубов быстро превратился в город с 60-тысячным населением.</h3>
 	<img src="img/sib5.jpg" width="100%" height="85%">
-	<h3>Я надеюсь, что познакомившись с этой землей, вы полюбите эти места  и захотите приезжать сюда вновь и вновь.</h3>
+	<h3>Я надеюсь, что познакомившись с Башкирским Зауральем, вы полюбите его и захотите приезжать сюда вновь и вновь.</h3>
 </td>
 	<td id="rightcol"><h2></h2>
 	<img src="img/sib4.jpg" width="100%" height="85%">
